--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3613,20 +3613,9 @@ input[type="radio"],
   padding: 5px;
   border-radius: 50%;
   margin-right: 12px;
-  box-shadow: 0 0 0 2px rgba(101, 181, 48, 0.5);
+  box-shadow:0 0 0 2px rgb(255 255 255);
 }
-.phone__number .phone__icon:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  -webkit-animation: ripple 3s infinite;
-  animation: ripple 3s infinite;
-  box-shadow: 0 0 0 2px rgba(101, 181, 48, 0.5);
-}
+
 .phone__number .phone__icon .icon-phone {
   display: flex;
   align-items: center;
@@ -7272,7 +7261,7 @@ textarea.form-control {
 .portfolio-filter li a {
   position: relative;
   color: #222;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 700;
   line-height: 1;
   text-transform: capitalize;
