--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -885,6 +885,7 @@ h6 {
 p {
   line-height: 1.75;
   margin-bottom: 15px;
+  font-family: "Sora", sans-serif
 }
 h1 {
   font-size: 52px;
@@ -8637,3 +8638,146 @@ textarea.form-control {
       width: 65%;
   }
   }
+  @media only screen and (min-width: 320px) and (max-width: 992px) {
+    .nav-menu > li > a {
+      color: #343a40 !important;
+      text-transform: uppercase;
+  }
+  }
+
+
+
+
+
+
+ 
+.wrapper-milestone{
+  max-width: 1080px;
+  margin: 50px auto;
+  padding: 0 20px;
+  position: relative;
+  font-family: "Sora", sans-serif;
+  color: #000;
+
+}
+.wrapper-milestone .center-line{
+  position: absolute;
+  height: 100%;
+  width: 4px;
+  background: #fff;
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+}
+.wrapper-milestone .row{
+  display: flex;
+}
+.wrapper-milestone .row-1{
+  justify-content: flex-start;
+}
+.wrapper-milestone .row-2{
+  justify-content: flex-end;
+}
+.wrapper-milestone .row section{
+  background: #fff;
+  border-radius: 5px;
+  width: calc(50% - 40px);
+  padding: 20px;
+  position: relative;
+}
+.wrapper-milestone .row section::before{
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  background: #fff;
+  top: 28px;
+  z-index: -1;
+  transform: rotate(45deg);
+}
+.row-1 section::before{
+  right: -7px;
+}
+.row-2 section::before{
+  left: -7px;
+}
+.row section .icon,
+.center-line .scroll-icon{
+  position: absolute;
+  background: #f2f2f2;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #00a8e8;
+  font-size: 17px;
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0,0,0,0.08), 0 3px 0 4px rgba(0,0,0,0.05);
+}
+.center-line .scroll-icon{
+  bottom: 0px;
+  left: 50%;
+  font-size: 25px;
+  transform: translateX(-50%);
+}
+.row-1 section .icon{
+  top: 15px;
+  right: -60px;
+}
+.row-2 section .icon{
+  top: 15px;
+  left: -60px;
+}
+.row section .details,
+.row section .bottom{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.row section .details .title{
+  font-size: 22px;
+  font-weight: 600;
+}
+.row section p{
+  margin: 10px 0 17px 0;
+}
+.row section .bottom a{
+  text-decoration: none;
+  background: #00a8e8;
+  color: #fff;
+  padding: 7px 15px;
+  border-radius: 5px;
+  /* font-size: 17px; */
+  font-weight: 400;
+  transition: all 0.3s ease;
+}
+.row section .bottom a:hover{
+  transform: scale(0.97);
+}
+@media(max-width: 790px){
+  .wrapper-milestone .center-line{
+    left: 40px;
+  }
+  .wrapper-milestone .row{
+    margin: 30px 0 3px 60px;
+  }
+  .wrapper-milestone .row section{
+    width: 100%;
+  }
+  .row-1 section::before{
+    left: -7px;
+  }
+  .row-1 section .icon{
+    left: -60px;
+  }
+}
+@media(max-width: 440px){
+  .wrapper-milestone .center-line,
+  .row section::before,
+  .row section .icon{
+    display: none;
+  }
+  .wrapper-milestone .row{
+    margin: 10px 0;
+  }
+}
